--- a/Tienda/nbproject/private/private.properties
+++ b/Tienda/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\DELL\\Desktop\\U\\IV SEMESTRE\\PROGRAMACION II\\LIBRERIAS O CONTROLADORES\\CONTROLADOR Fechas\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.43-bin.jar=C:\\Users\\DELL\\Desktop\\U\\IV SEMESTRE\\PROGRAMACION II\\LIBRERIAS O CONTROLADORES\\CONTROLADOR DataBase\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
 user.properties.file=C:\\Users\\DELL\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
