--- a/Tienda/nbproject/project.properties
+++ b/Tienda/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/Tienda.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\DELL\\Desktop\\U\\IV SEMESTRE\\PROGRAMACION II\\CONTROLADOR Fechas\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.43-bin.jar=C:\\Users\\DELL\\Desktop\\U\\IV SEMESTRE\\PROGRAMACION II\\CONTROLADOR DataBase\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
+file.reference.mysql-connector-java-5.1.43-bin.jar-1=C:\\Users\\DELL\\Documents\\GitHub\\ProyectoPacientes\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.43-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
